<resources>
    <string name="app_name">Projet</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="liste_des_conseils">Liste des conseils</string>
    <string name="ajouter_un_conseil">Ajouter un conseil</string>
    <string name="nom_du_conseil">Nom du conseil</string>
    <string name="description">Description</string>
    <string name="title_conseils">Conseils</string>
    <string name="title_save">Sauvegarder</string>
    <string name="title_day">jour</string>
    <string name="title_calendar">Calendrier</string>
    <string name="autres_conseils">Autres conseils :</string>
    <string name="conseil_du_jour">Conseil du jour :</string>
    <string name="nom_du_jour">Nom du jour</string>
    <string name="title_populate">populate</string>
    <string name="ajoutez_une_tache">Ajoutez une tâche</string>
    <string name="liste_des_taches">Liste des taches</string>
    <string name="annuler">Annuler</string>
    <string name="confirmer">Confirmer</string>
    <string name="nom_de_la_tache">Nom de la tâche</string>
    <plurals name="compositions">
        <item quantity="zero">%1s et pas d\'autre conseil</item>
        <item quantity="one">%1s and 1 autre conseil</item>
        <item quantity="other">%1s and %2d autres conseils</item>
    </plurals>
    <plurals name="tasks">
        <item quantity="zero">Pas de tâche</item>
        <item quantity="one">1 tâche</item>
        <item quantity="other">%1d tâches</item>
    </plurals>
</resources>