<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_calendar"
        android:name="fr.uha.gm.projet.ui.calendar.CalendarFragment"
        android:label="CalendarFragment"
        tools:layout="@layout/fragment_calendar">
        <action
            android:id="@+id/action_navigation_list_to_day"
            app:destination="@id/navigation_day" />
    </fragment>

    <fragment
        android:id="@+id/navigation_day"
        android:name="fr.uha.gm.projet.ui.calendar.JourFragment"
        android:label="@string/title_day"
        tools:layout="@layout/fragment_day" >
        <argument
            android:name="id"
            app:argType="long"
            android:defaultValue="0L" />
        <action
            android:id="@+id/action_navigation_day_to_personPickerFragment"
            app:destination="@id/conseilPickerFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_listConseil"
        android:name="fr.uha.gm.projet.ui.conseils.ListConseilsFragment"
        android:label="@string/title_conseils"
        tools:layout="@layout/fragment_list_conseils" >
        <action
            android:id="@+id/action_navigation_list_to_conseil"
            app:destination="@id/navigation_conseil" />
    </fragment>

    <fragment
        android:id="@+id/navigation_conseil"
        android:name="fr.uha.gm.projet.ui.conseils.ConseilFragment"
        android:label="ConseilFragment"
        tools:layout="@layout/fragment_conseil">
        <argument
            android:name="id"
            app:argType="long"
            android:defaultValue="0L" />
        <action
            android:id="@+id/action_navigation_conseil_to_task"
            app:destination="@id/taskPickerFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="fr.uha.gm.projet.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="fr.uha.gm.projet.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <dialog
        android:id="@+id/datePickerFragment"
        android:name="fr.uha.gm.android.ui.picker.DatePickerFragment"
        android:label="DatePickerFragment">
        <argument
            android:name="date"
            app:argType="long" />
        <argument
            android:name="title"
            app:argType="integer" />
        <argument
            android:name="requestKey"
            app:argType="string" />
    </dialog>
    <dialog
        android:id="@+id/conseilPickerFragment"
        android:name="fr.uha.gm.projet.ui.ConseilPickerFragment"
        android:label="ConseilPickerFragment">
        <argument
            android:name="principal"
            app:argType="long" />
        <argument
            android:name="requestKey"
            app:argType="string" />
    </dialog>

    <dialog
        android:id="@+id/taskPickerFragment"
        android:name="fr.uha.gm.projet.ui.TaskPickerFragment"
        android:label="TaskPickerFragment">
        <argument
            android:name="id"
            app:argType="long"
            android:defaultValue="0L" />
        <argument
            android:name="requestKey"
            app:argType="string" />
    </dialog>

</navigation>